--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -144,7 +144,7 @@ steps:
   args:
     [
       'container', 'clusters', 'get-credentials',
-      '$_GKE_CLUSTER',      # <-- 클러스터 이름
+      '$_GKE_CLUSTER',      
       '--zone', '$_DEPLOY_REGION',
       '--project', '$PROJECT_ID'
     ]
@@ -157,8 +157,8 @@ steps:
       apt-get update && apt-get install -y gettext-base
       envsubst < ./deployment/kubernetes/direct-deal-account-service.yml | kubectl apply -f -
   env:
-     - 'CLOUDSDK_COMPUTE_ZONE=$_DEPLOY_REGION'      # 원하는 GCP 리전/존으로 수정
-     - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' # GKE 클러스터 이름으로 수정
+     - 'CLOUDSDK_COMPUTE_ZONE=$_DEPLOY_REGION'      
+     - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' 
 
 timeout: '1200s'  # Maximum build timeout set to 20 minutes
 
