--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,5 +1,5 @@
 FROM mysql:5.7.41
-LABEL image.authors="Jeon, Cheol <real.overcomer.jc@gmail.com>"
+LABEL image.authors="Jeon, Cheol"
 ADD direct-deal-my.cnf /etc/mysql/conf.d/custom.cnf
 ADD direct-deal-init.sql /docker-entrypoint-initdb.d/direct-deal-init.sql
 EXPOSE 3306
