--- a/deployment/kubernetes/base/direct-deal-sale-catalog-service-webflux.yml
+++ b/deployment/kubernetes/base/direct-deal-sale-catalog-service-webflux.yml
@@ -1,29 +1,29 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-service
+  name: sale-catalog-service
   # namespace: default
   labels:
-    app: account-service
+    app: sale-catalog-service
 spec:
   ports:
   - name: httpport
-    port: 8080
+    port: 8082
     protocol: TCP
-    targetPort: 8080
+    targetPort: 8082
   selector:
-    app: account-service
+    app: sale-catalog-service
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: account-service
+  name: sale-catalog-service
   # namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: account-service
+      app: sale-catalog-service
       version: 'v1'
   # strategy:
   #   rollingUpdate:
@@ -31,7 +31,7 @@ spec:
   template:
     metadata:
       labels:
-        app: account-service
+        app: sale-catalog-service
         version: 'v1'
     spec:
       initContainers:
@@ -43,7 +43,7 @@ spec:
           - |
             while true
             do
-              rt=$(nc -z -w 1 mysql 3306)
+              rt=$(nc -z -w 1 mysql 3306 && nc -z -w 1 mongo 27017 && nc -z -w 1 kafka 9092)
               if [ $? -eq 0 ]; then
                 echo "DB is UP"
                 break
@@ -52,8 +52,8 @@ spec:
               sleep 10
             done
       containers:
-      - name: account-service
-        image: gcr.io/${PROJECT_ID}/direct-deal-account-service:latest
+      - name: sale-catalog-service
+        image: direct-deal-sale-catalog-service-webflux:dummy
         imagePullPolicy: Always
         env:
         - name: SPRING_PROFILES_ACTIVE
@@ -61,27 +61,27 @@ spec:
         - name: PROJECT_ID
           value: "${PROJECT_ID}"
         ports:
-        - containerPort: 8080
+        - containerPort: 8082
           name: httpport
         # resources:
         #     # requests:
         #     #   memory: '512Mi'
         #     #   cpu: '500m'
         #     limits:
-        #       memory: '256Mi'
+        #       memory: '512Mi'
         #       # cpu: '100m'
-        livenessProbe:
-          httpGet:
-            path: /actuator/health
-            port: 8080
-          initialDelaySeconds: 120
-          periodSeconds: 20
-          failureThreshold: 10
-        readinessProbe:
-          httpGet:
-            path: /actuator/health
-            port: 8080
-          initialDelaySeconds: 120
-          periodSeconds: 20
-          failureThreshold: 10
+        # livenessProbe:
+        #   httpGet:
+        #     path: /actuator/health
+        #     port: 8082
+        #   initialDelaySeconds: 120
+        #   periodSeconds: 20
+        #   failureThreshold: 10
+        # readinessProbe:
+        #   httpGet:
+        #     path: /actuator/health
+        #     port: 8082
+        #   initialDelaySeconds: 120
+        #   periodSeconds: 20
+        #   failureThreshold: 10
 ---
