--- a/deployment/kubernetes/base/mysql-service.yml
+++ b/deployment/kubernetes/base/mysql-service.yml
@@ -1,40 +1,45 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: mysql
   labels:
-    app: nginx
+    app: mysql
 spec:
   selector:
-    app: nginx
+    app: mysql
   ports:
-  - name: nginxport
-    port: 9000
-    targetPort: 9000
+  - name: mysqlport
+    port: 3306
+    targetPort: 3306
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: mysql
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: mysql
       version: 'v1'
   template:
     metadata:
       labels:
-        app: nginx
+        app: mysql
         version: 'v1'
     spec:
       containers:
-      - name: nginx
-        image: localhost:5000/direct-deal-nginx:latest
+      - name: mysql
+        image: direct-deal-mysql:dummy
         imagePullPolicy: Always
         ports:
-        - containerPort: 9000
-          name: nginxport
+        - containerPort: 3306
+          name: mysqlport
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            value: "secret"
+          - name: PROJECT_ID
+            value: "${PROJECT_ID}"
         # resources:
         #     # requests:
         #     #   memory: '512Mi'
