--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,146 +14,147 @@ steps:
   id: 'docker-build-account-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-account-service', './direct-deal-account-service'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-account-service:$REVISION_ID', './direct-deal-account-service'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-account-service'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-account-service', 'gcr.io/$PROJECT_ID/direct-deal-account-service'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-account-service'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-account-service', 'gcr.io/$PROJECT_ID/direct-deal-account-service'
+#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-sale-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-service', './direct-deal-sale-service'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-service:$REVISION_ID', './direct-deal-sale-service'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-sale-service'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-sale-service', 'gcr.io/$PROJECT_ID/direct-deal-sale-service'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-sale-service'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-sale-service', 'gcr.io/$PROJECT_ID/direct-deal-sale-service'
+#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-sale-catalog-service-webflux'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux', './direct-deal-sale-catalog-service-webflux'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux:$REVISION_ID', './direct-deal-sale-catalog-service-webflux'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-sale-catalog-service-webflux'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-sale-catalog-service-webflux'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux'
+#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-transaction-history-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service', './direct-deal-transaction-history-service'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service:$REVISION_ID', './direct-deal-transaction-history-service'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-transaction-history-service'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-transaction-history-service'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service'
+#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-chatting-service'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service', './direct-deal-chatting-service'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service:$REVISION_ID', './direct-deal-chatting-service'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-chatting-service'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-chatting-service'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service'
+#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-gateway'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-gateway', './direct-deal-gateway'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-gateway:$REVISION_ID', './direct-deal-gateway'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-gateway'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-gateway', 'gcr.io/$PROJECT_ID/direct-deal-gateway'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-gateway'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-gateway', 'gcr.io/$PROJECT_ID/direct-deal-gateway'
+#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-mysql'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-mysql', './mysql'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-mysql:$REVISION_ID', './mysql'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-mysql'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-mysql', 'gcr.io/$PROJECT_ID/direct-deal-mysql'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-mysql'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-mysql', 'gcr.io/$PROJECT_ID/direct-deal-mysql'
+#     ]
+
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-nginx'
   args:
     [
-      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-nginx', './direct-deal-ui'
+      'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-nginx:$REVISION_ID', './direct-deal-ui'
     ]
-- name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-tag-nginx'
-  args:
-    [
-      'tag', 'gcr.io/$PROJECT_ID/direct-deal-nginx', 'gcr.io/$PROJECT_ID/direct-deal-nginx'
-    ]
+# - name: 'gcr.io/cloud-builders/docker'
+#   id: 'docker-tag-nginx'
+#   args:
+#     [
+#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-nginx', 'gcr.io/$PROJECT_ID/direct-deal-nginx'
+#     ]
 
 # 3. Push images to the registry
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-push-all'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-account-service'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-account-service:$REVISION_ID'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-sale-service'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-sale-service:$REVISION_ID'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux:$REVISION_ID'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service:$REVISION_ID'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service:$REVISION_ID'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-gateway'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-gateway:$REVISION_ID'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-mysql'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-mysql:$REVISION_ID'
     ]
 - name: 'gcr.io/cloud-builders/docker'
   args:
     [
-      'push', 'gcr.io/$PROJECT_ID/direct-deal-nginx'
+      'push', 'gcr.io/$PROJECT_ID/direct-deal-nginx:$REVISION_ID'
     ]
 
 # 4. Deploy to Kubernetes cluster by applying manifests
@@ -190,15 +191,66 @@ steps:
     - 'CLOUDSDK_COMPUTE_ZONE=$_DEPLOY_REGION'      
     - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' 
 
+# - name: 'gcr.io/cloud-builders/gcloud'
+#   entrypoint: 'bash'
+#   args:
+#     - '-c'
+#     - |
+#       if ! kubectl get deployment $deploy -n default > /dev/null 2>&1; then
+#       apt-get update && apt-get install -y gettext-base
+#       for file in ./deployment/kubernetes/*.yml; do
+#         echo "Applying $file"
+#         envsubst < $file | kubectl apply -f -
+#       done
+#   env:
+#     - 'CLOUDSDK_COMPUTE_ZONE=$_DEPLOY_REGION'      
+#     - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' 
+#     - 'PROJECT_ID=$PROJECT_ID'
+
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args:
     - '-c'
     - |
-      apt-get update && apt-get install -y gettext-base
-      for file in ./deployment/kubernetes/*.yml; do
-        echo "Applying $file"
-        envsubst < $file | kubectl apply -f -
+      set -e
+      declare -A manifests
+      declare -A images
+
+      manifests[account-service]="./deployment/kubernetes/direct-deal-account-service.yml"
+      manifests[chatting-service]="./deployment/kubernetes/direct-deal-chatting-service.yml"
+      manifests[gateway]="./deployment/kubernetes/direct-deal-gateway-service.yml"
+      manifests[sale-catalog-service]="./deployment/kubernetes/direct-deal-sale-catalog-service.yml"
+      manifests[sale-service]="./deployment/kubernetes/direct-deal-sale-service-webflux.yml"
+      manifests[transaction-history-service]="./deployment/kubernetes/direct-deal-transaction-history-service.yml"
+      manifests[kafka]="./deployment/kubernetes/kafka-service.yml"
+      manifests[mongo]="./deployment/kubernetes/mongo-service.yml"
+      manifests[mysql]="./deployment/kubernetes/mysql-service.yml"
+      manifests[nginx]="./deployment/kubernetes/nginx-service.yml"
+      manifests[redis]="./deployment/kubernetes/redis-service.yml"
+      manifests[zookeeper]="./deployment/kubernetes/zookeeper-service.yml"
+
+      images[account-service]="gcr.io/$PROJECT_ID/direct-deal-account-service:$REVISION_ID"
+      images[chatting-service]="gcr.io/$PROJECT_ID/direct-deal-chatting-service:$REVISION_ID"
+      images[gateway]="gcr.io/$PROJECT_ID/direct-deal-gateway:$REVISION_ID"
+      images[sale-catalog-service]="gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service:$REVISION_ID"
+      images[sale-service]="gcr.io/$PROJECT_ID/direct-deal-sale-service-webflux:$REVISION_ID"
+      images[transaction-history-service]="gcr.io/$PROJECT_ID/direct-deal-transaction-history-service:$REVISION_ID"
+      images[kafka]="wurstmeister/kafka:2.12-2.4.0"
+      images[mongo]="mongo:4.0.25"
+      images[mysql]="gcr.io/$PROJECT_ID/direct-deal-mysql:$REVISION_ID"
+      images[nginx]="gcr.io/$PROJECT_ID/direct-deal-nginx:$REVISION_ID"
+      images[redis]="redis:6.2.4-alpine3.13"
+      images[zookeeper]="wurstmeister/zookeeper"
+
+      for deploy in "${!manifests[@]}"; do
+          if ! kubectl get deployment $deploy -n default > /dev/null 2>&1; then
+              echo "Creating deployment for $deploy"
+              envsubst < "${manifests[$deploy]}" | kubectl apply -n default -f -
+              # Wait for the deployment to be ready
+              # kubectl rollout status deployment/$deploy -n default
+          fi
+          echo "Updating image for $deploy"
+          kubectl set image deployment/$deploy $deploy=${images[$deploy]} -n default
       done
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=$_DEPLOY_REGION'      
