--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 # 1. Execute Gradle build
-- name: 'gradle:jdk11'  # Gradle 빌드용 이미지 (필요에 따라 변경 가능)
+- name: 'gradle:jdk11'
   id: 'build-gradle'
   entrypoint: 'bash'
   args:
@@ -16,12 +16,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-account-service:$REVISION_ID', './direct-deal-account-service'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-account-service'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-account-service', 'gcr.io/$PROJECT_ID/direct-deal-account-service'
-#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-sale-service'
@@ -29,12 +23,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-service:$REVISION_ID', './direct-deal-sale-service'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-sale-service'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-sale-service', 'gcr.io/$PROJECT_ID/direct-deal-sale-service'
-#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-sale-catalog-service-webflux'
@@ -42,12 +30,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux:$REVISION_ID', './direct-deal-sale-catalog-service-webflux'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-sale-catalog-service-webflux'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux'
-#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-transaction-history-service'
@@ -55,12 +37,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service:$REVISION_ID', './direct-deal-transaction-history-service'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-transaction-history-service'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service'
-#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-chatting-service'
@@ -68,12 +44,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service:$REVISION_ID', './direct-deal-chatting-service'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-chatting-service'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service'
-#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-gateway'
@@ -81,12 +51,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-gateway:$REVISION_ID', './direct-deal-gateway'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-gateway'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-gateway', 'gcr.io/$PROJECT_ID/direct-deal-gateway'
-#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-mysql'
@@ -94,12 +58,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-mysql:$REVISION_ID', './mysql'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-mysql'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-mysql', 'gcr.io/$PROJECT_ID/direct-deal-mysql'
-#     ]
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-nginx'
@@ -107,12 +65,6 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-nginx:$REVISION_ID', './direct-deal-ui'
     ]
-# - name: 'gcr.io/cloud-builders/docker'
-#   id: 'docker-tag-nginx'
-#   args:
-#     [
-#       'tag', 'gcr.io/$PROJECT_ID/direct-deal-nginx', 'gcr.io/$PROJECT_ID/direct-deal-nginx'
-#     ]
 
 # 3. Push images to the registry
 - name: 'gcr.io/cloud-builders/docker'
