--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,8 +8,8 @@ steps:
     - |
       #./gradlew clean build
       #./gradlew clean build -p direct-deal-gateway
-      ./gradlew build --parallel -Dorg.gradle.jvmargs="-Xmx2g"
-      ./gradlew build -p direct-deal-gateway -Dorg.gradle.jvmargs="-Xmx2g"
+      ./gradlew build --parallel -Dorg.gradle.jvmargs="-Xmx20g"
+      ./gradlew build -p direct-deal-gateway -Dorg.gradle.jvmargs="-Xmx20g"
 
 # 2. Docker image build and tag (each service in multiple steps)
 - name: 'gcr.io/cloud-builders/docker'
@@ -18,6 +18,8 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-account-service:$REVISION_ID', './direct-deal-account-service'
     ]
+  waitFor:
+    - build-gradle
 
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-sale-service'
@@ -25,6 +27,8 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-service:$REVISION_ID', './direct-deal-sale-service'
     ]
+  waitFor:
+    - build-gradle
   
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-sale-catalog-service-webflux'
@@ -32,6 +36,8 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux:$REVISION_ID', './direct-deal-sale-catalog-service-webflux'
     ]
+  waitFor:
+    - build-gradle
   
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-transaction-history-service'
@@ -39,6 +45,8 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service:$REVISION_ID', './direct-deal-transaction-history-service'
     ]
+  waitFor:
+    - build-gradle
   
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-chatting-service'
@@ -46,6 +54,8 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service:$REVISION_ID', './direct-deal-chatting-service'
     ]
+  waitFor:
+    - build-gradle
   
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-gateway'
@@ -53,6 +63,8 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-gateway:$REVISION_ID', './direct-deal-gateway'
     ]
+  waitFor:
+    - build-gradle
   
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-mysql'
@@ -60,6 +72,8 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-mysql:$REVISION_ID', './mysql'
     ]
+  waitFor:
+    - build-gradle
   
 - name: 'gcr.io/cloud-builders/docker'
   id: 'docker-build-nginx'
@@ -67,59 +81,85 @@ steps:
     [
       'build', '-t', 'gcr.io/$PROJECT_ID/direct-deal-nginx:$REVISION_ID', './direct-deal-ui'
     ]
+  waitFor:
+    - build-gradle
   
 # 3. Push images to the registry
 - name: 'gcr.io/cloud-builders/docker'
-  id: 'docker-push-all'
+  id: 'docker-push-account-service'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-account-service:$REVISION_ID'
     ]
-  
+  waitFor:
+    - docker-build-account-service
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'docker-push-sale-service'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-sale-service:$REVISION_ID'
     ]
-  
+  waitFor:
+    - docker-build-sale-service
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'docker-push-sale-catalog-service-webflux'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-sale-catalog-service-webflux:$REVISION_ID'
     ]
-  
+  waitFor:
+    - docker-build-sale-catalog-service-webflux
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'docker-push-transaction-history-service'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-transaction-history-service:$REVISION_ID'
     ]
-  
+  waitFor:
+    - docker-build-transaction-history-service
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'docker-push-chatting-service'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-chatting-service:$REVISION_ID'
     ]
+  waitFor:
+    - docker-build-chatting-service
   
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'docker-push-gateway'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-gateway:$REVISION_ID'
     ]
-  
+  waitFor:
+    - docker-build-gateway
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'docker-push-mysql'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-mysql:$REVISION_ID'
     ]
-  
+  waitFor:
+    - docker-build-mysql
+
 - name: 'gcr.io/cloud-builders/docker'
+  id: 'docker-push-nginx'
   args:
     [
       'push', 'gcr.io/$PROJECT_ID/direct-deal-nginx:$REVISION_ID'
     ]
+  waitFor:
+    - docker-build-nginx
 
 # 4. Deploy to Kubernetes cluster by applying manifests
 - name: 'gcr.io/cloud-builders/gcloud'
+  id: 'gke-get-credentials'
   args:
     [
       'container', 'clusters', 'get-credentials',
@@ -127,6 +167,7 @@ steps:
       '--zone', '$_DEPLOY_REGION',
       '--project', '$PROJECT_ID'
     ]
+  waitFor: ['-']
 
 # - name: 'gcr.io/cloud-builders/gcloud'
 #   entrypoint: 'bash'
@@ -140,6 +181,7 @@ steps:
 #      - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' 
 
 - name: 'gcr.io/cloud-builders/gcloud'
+  id: 'apply-configmaps'
   entrypoint: 'bash'
   args:
     - '-c'
@@ -151,7 +193,19 @@ steps:
   env:
     - 'CLOUDSDK_COMPUTE_ZONE=$_DEPLOY_REGION'      
     - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' 
-
+  waitFor:
+    - docker-push-account-service
+    - docker-push-chatting-service
+    - docker-push-gateway
+    - docker-push-transaction-history-service
+    - docker-push-sale-catalog-service-webflux
+    - docker-push-sale-service
+    - docker-push-mysql
+    - docker-push-nginx
+    - docker-push-redis
+    - docker-push-kafka
+    - docker-push-mongo
+    - docker-push-zookeeper
 # - name: 'gcr.io/cloud-builders/gcloud'
 #   entrypoint: 'bash'
 #   args:
@@ -217,6 +271,20 @@ steps:
     - 'CLOUDSDK_COMPUTE_ZONE=$_DEPLOY_REGION'      
     - 'CLOUDSDK_CONTAINER_CLUSTER=$_GKE_CLUSTER' 
     - 'PROJECT_ID=$PROJECT_ID'
+  waitFor:
+    - docker-push-account-service
+    - docker-push-chatting-service
+    - docker-push-gateway
+    - docker-push-transaction-history-service
+    - docker-push-sale-catalog-service-webflux
+    - docker-push-sale-service
+    - docker-push-mysql
+    - docker-push-nginx
+    - docker-push-redis
+    - docker-push-kafka
+    - docker-push-mongo
+    - docker-push-zookeeper
+    - apply-configmaps
 
 timeout: '1200s'  # Maximum build timeout set to 20 minutes
 
