--- a/deployment/kubernetes/direct-deal-gateway-service.yml
+++ b/deployment/kubernetes/direct-deal-gateway-service.yml
@@ -33,7 +33,7 @@ spec:
     spec:
       containers:
       - name: gateway
-        image: gcr.io/${PROJECT_ID}/direct-deal-gateway:latest
+        image: gcr.io/${PROJECT_ID}/direct-deal-gateway:${REVISION_ID}
         imagePullPolicy: Always
         env:
         - name: SPRING_PROFILES_ACTIVE
