feat: Upgrade Spring Boot from 2.5.0 to 3.2.12
This commit performs a significant upgrade of the Spring Boot dependency
to version 3.2.12.  Key changes include:

- **Spring Boot Version:**  Updated from 2.5.0 to 3.2.12
- **Dependency Updates:**  Updated several Spring Boot dependencies
(e.g., `spring-boot-starter-security`, `spring-boot-starter-web`,
`spring-boot-starter-data-jpa`) to their respective 3.2.12 versions
- **Java Version:**  Requires Java 17 or later (due to Spring Boot 3's
Java 17 requirement)
- **Configuration Changes:** Updated to newer Spring Cloud version - `2023.0.6`
- **AxonFramework Version:**  Updated from 4.5.4 to 4.9.4

--- a/deployment/kubernetes/configmap/direct-deal-gateway-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-gateway-configmap.yml
@@ -34,7 +34,8 @@ data:
           enabled: true
     ---
     spring:
-      profiles: dev
+      profiles:
+        active: dev,kubernetes
       
       cloud:
         gateway:
@@ -42,8 +43,9 @@ data:
               add-to-simple-url-handler-mapping: true
               corsConfigurations:
                 '[/**]':
-                  allowedOriginPatterns: 
-                    - "https://*.ngrok-free.app"
+                  allowedOriginPatterns:
+                    - "*" 
+                    # - "https://*.ngrok-free.app"
                   #allowedOrigins: 
                   #  - "https://8080-cs-00199ee9-8e40-4db5-8ac0-b4c460d98bad.cs-europe-west4-bhnf.cloudshell.dev"
                   allowedHeaders: "*"
