--- a/direct-deal-sale-service/src/main/resources/application.properties
+++ b/direct-deal-sale-service/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=direct-deal-sale-service
+spring.config.import=kubernetes:
 
 spring.cloud.kubernetes.discovery.enabled=false
 spring.cloud.kubernetes.config.enabled=true
+# spring.cloud.kubernetes.config.name=direct-deal-sale-service
+# spring.cloud.kubernetes.config.namespace=default
+# spring.cloud.kubernetes.config.enable-api=true
