--- a/deployment/kubernetes/configmap/direct-deal-chatting-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-chatting-configmap.yml
@@ -13,8 +13,11 @@ data:
     jwt.secret=L2RpcmVjdC1kZWFsL2RpcmVjdC1kZWFsLWFjY291bnQtc2VydmljZS9kaXJlY3QtZGVhbC9kaXJlY3QtZGVhbC1hY2NvdW50LXNlcnZpY2UvZGlyZWN0LWRlYWwvZGlyZWN0LWRlYWwtYWNjb3VudC1zZXJ2aWNlL2RpcmVjdC1kZWFsL2RpcmVjdC1kZWFsLWFjY291bnQtc2VydmljZQo=
     jwt.access-token-validity-in-seconds=3600
     jwt.refresh-token-validity-in-seconds=2592000
+
     ---
-    spring.profiles=dev
+    # Profiles
+    #spring.profiles=dev
+    spring.profiles.active=dev,kubernetes
 
     # JPA Settings
     spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -24,9 +27,7 @@ data:
 
     spring.jpa.open-in-view=false
     spring.jpa.defer-datasource-initialization=true
-    spring.jpa.hibernate.ddl-auto=create-drop
-
-    spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+    spring.jpa.hibernate.ddl-auto=update
     spring.jpa.properties.hibernate.dialect.storage_engine=innodb
     spring.jpa.properties.hibernate.format_sql=true
 
