--- a/deployment/kubernetes/configmap/direct-deal-transaction-history-configmap.yml
+++ b/deployment/kubernetes/configmap/direct-deal-transaction-history-configmap.yml
@@ -12,8 +12,11 @@ data:
     jwt.secret=L2RpcmVjdC1kZWFsL2RpcmVjdC1kZWFsLWFjY291bnQtc2VydmljZS9kaXJlY3QtZGVhbC9kaXJlY3QtZGVhbC1hY2NvdW50LXNlcnZpY2UvZGlyZWN0LWRlYWwvZGlyZWN0LWRlYWwtYWNjb3VudC1zZXJ2aWNlL2RpcmVjdC1kZWFsL2RpcmVjdC1kZWFsLWFjY291bnQtc2VydmljZQo=
     jwt.access-token-validity-in-seconds=3600
     jwt.refresh-token-validity-in-seconds=2592000
+
     ---
-    spring.profiles=dev
+    # Profiles
+    #spring.profiles=dev
+    spring.profiles.active=dev,kubernetes
 
     # Axon Framework Settings
     axon.kafka.bootstrap-servers=kafka:9092
@@ -36,9 +39,14 @@ data:
     #axon.eventhandling.processors.transactionHistory.thread-count=1
     #axon.eventhandling.processors.transactionHistory.batch-size=1
 
-    #axon.serializer.general=xstream
-    #axon.serializer.events=xstream
-    #axon.serializer.messages=xstream
+    axon.serializer.general=jackson
+    axon.serializer.events=jackson
+    axon.serializer.messages=jackson
+
+    spring.kafka.properties.jmx.enabled=false
+    spring.kafka.properties.jmx=false
+    axon.kafka.properties.jmx.enabled=false
+    spring.jmx.enabled=false
 
     # JPA Settings
     spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -48,8 +56,7 @@ data:
 
     spring.jpa.open-in-view=false
     spring.jpa.defer-datasource-initialization=true
-    spring.jpa.hibernate.ddl-auto=create-drop
-    spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+    spring.jpa.hibernate.ddl-auto=update
     spring.jpa.properties.hibernate.dialect.storage_engine=innodb
     spring.jpa.properties.hibernate.format_sql=true
 
