--- a/direct-deal-gateway/build.gradle
+++ b/direct-deal-gateway/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.5.0'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.2.12'
+	id 'io.spring.dependency-management' version '1.1.4'
 	id 'java'
 }
 
@@ -14,7 +14,7 @@ bootJar {
 
 group = 'kr.co.directdeal.gateway'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
@@ -23,21 +23,24 @@ repositories {
 }
 
 ext {
-	set('springCloudVersion', "2020.0.3-SNAPSHOT")
-}
-
-dependencies {
-	implementation "org.springframework.boot:spring-boot-starter-actuator"
-	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all:2.0.3'
-	
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    set('springCloudVersion', "2023.0.6")
+	set('springBootVersion', "3.2.12")
 }
 
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+		mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
 	}
+}
+
+dependencies {
+	implementation "org.springframework.boot:spring-boot-starter-actuator"
+	implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.2.1'
+	//implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-fabric8-all:3.2.0-M2'
+	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-config:3.2.0'
+	
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
