--- a/direct-deal-sale-catalog-service-webflux/src/test/resources/application-test.properties
+++ b/direct-deal-sale-catalog-service-webflux/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
 spring.application.name=direct-deal-sale-catalog-service-webflux
-spring.config.import=optional:kubernetes:
+spring.cloud.kubernetes.enabled=false
 spring.cloud.kubernetes.discovery.enabled=false
-spring.cloud.kubernetes.config.enabled=true
+spring.cloud.kubernetes.config.enabled=false
 
 spring.jackson.serialization.write-dates-as-timestamps=false
